[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kalpana"]

[project]
name = "kalpana"
version = "0.0.23"
dependencies = [
	"dask==2023.1.0",
	"geopandas==0.12.2",
	"rioxarray==0.13.3",
	"pandas==1.5.3",
	"matplotlib==3.6.3",
	"netCDF4==1.6.2",
	"simplekml==1.3.6",
	"scipy==1.10.0",
	"rtree==1.0.1",
	"cmocean==2.0",     
	"tqdm==4.64.1",
	"numpy==1.24.1",
	"ipykernel==6.20.2",
	"shapely==2.0.0",
	"loguru==0.7.0",
	"cartopy==0.21.1",
	"psycopg==3.1.18"
]

authors = [
  { name="Tomas Cuevas", email="tomascuevas@gmail.com.com" },
  { name="James McManus", email="jmpmcman@renci.org" },
  { name="Casey Dietrich", email="jcdietri@ncsu.edu" },
]

description = "Downscaling ADCIRC flooding predictions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/ccht-ncsu/Kalpana"
"Bug Tracker" = "https://github.com/ccht-ncsu/Kalpana/issues"
